interceptor is implemented

--- a/src/app/entry/login/login.component.html
+++ b/src/app/entry/login/login.component.html
@@ -1,7 +1,7 @@
 
-  <h1><i>{{ title }}</i></h1>
+  <h3><i>{{ title }}</i></h3>
   <form [formGroup]="loginForm" class="form" (ngSubmit)="onLogin()">
-    <div class="row">
+    <div class="c-row">
       <div class="input col-25">
         <label  for="emailId">email-Id:</label>
       </div>
@@ -14,7 +14,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="c-row">
       <div class="input col-25">
         <label  for="password">Password:</label>
       </div>
