--- a/src/app/entry/sign-up/sign-up.component.html
+++ b/src/app/entry/sign-up/sign-up.component.html
@@ -1,7 +1,7 @@
 
-  <h1><i>{{ title }}</i></h1>
+  <h3><i>{{ title }}</i></h3>
   <form [formGroup]="userSignUp" class="form" (ngSubmit)="addCurrentUser()">
-    <div class="row">
+    <div class="c-row">
       <div class="input col-25">
         <label  for="firstName">First Name:</label>
       </div>
@@ -14,7 +14,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="c-row">
       <div class="input col-25">
         <label  for="lastName">Last name:</label>
       </div>
@@ -28,7 +28,7 @@
       </div>
     </div>
     
-    <div class="row">
+    <div class="c-row">
       <div class="input col-25">
         <label  for="emailId">email-Id:</label>
       </div>
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="c-row">
       <div class="input col-25">
         <label  for="password">Password:</label>
       </div>
