--- a/src/app/user-portal/my-profile/my-profile.component.html
+++ b/src/app/user-portal/my-profile/my-profile.component.html
@@ -46,7 +46,7 @@
 	      </div>
 	      <div class="col-75">
 	        <input type="text" id="emailId" name=emailId formControlName="emailId"  
-	          placeholder="update email id...">
+	          placeholder="update email id..." readonly>
 	       </div>
 	    </div>
 		</form>
