--- a/src/app/entry/sign-up/sign-up.component.scss
+++ b/src/app/entry/sign-up/sign-up.component.scss
@@ -7,7 +7,7 @@
   box-shadow: 1px 1px 5px #979797;
   display: block;
 }
-h1 {
+h3 {
   font-family: Cursive;
   text-align: center;
 }
@@ -18,7 +18,7 @@ h1 {
   padding:5px 15px;
   box-shadow: 1px 1px 5px #6c6cf5;
 }
-.row {
+.c-row {
   text-align: center !important;
 }
 @media only screen and (max-width:600px) {
@@ -27,12 +27,11 @@ h1 {
   }
   .col-25 {
     text-align: left;
-    
+    font-size: 10px;
   }
   .col-75 {
     text-align: center;
-  }
-  label {
     font-size: 10px;
   }
+  
 }
