--- a/src/app/user-portal/add-blog/add-blog.component.html
+++ b/src/app/user-portal/add-blog/add-blog.component.html
@@ -1,11 +1,11 @@
 
 
   <div class="modal-header">
-    <h2 class="modal-title mx-auto text-info"><strong>{{ titleBlog }}</strong></h2>
+    <h3 class="modal-title mx-auto text-info"><strong>{{ titleBlog }}</strong></h3>
   </div>
   <div class="modal-body">
     <form [formGroup]="blogForm" class="form">
-      <div class="row">
+      <div class="c-row">
         <div class="input col-25">
           <label  for="title">Blog Title:</label>
         </div>
@@ -19,7 +19,7 @@
         </div>
       </div>
   
-      <div class="row">
+      <div class="c-row">
         <div class="input col-25">
           <label  for="description">Description:</label>
         </div>
@@ -33,7 +33,7 @@
         </div>
       </div>
   
-      <div class="row">
+      <div class="c-row">
         <div class="input col-25">
           <label  for="content">Content:</label>
         </div>
