--- a/src/app/user-portal/users-blog/users-blog.component.scss
+++ b/src/app/user-portal/users-blog/users-blog.component.scss
@@ -74,9 +74,11 @@ tr:hover {
 }
 .b-date {
   display: block;
-  text-align: left; 
+  text-align: center; 
+  font-size: 10px;
+  padding: 0px;
+  width: 40px;
   color: #797777;
-  margin-top: 20px;;
 }
 #like {
   /*padding: 5px;*/
@@ -85,3 +87,43 @@ tr:hover {
   color: white;
   /*background-color: #0492ca;*/
 }
+
+img {
+  height: 170px;
+  width: 170px;
+}
+
+@media only screen and (max-width:600px) {
+  
+  .blog-table {
+    width: 90%;
+    margin:auto;
+  }
+
+  td {
+    font-size: 12px !important;
+  }
+
+  .b-cmt button {
+   font-size: 12px !important;
+   padding: 2px; 
+  }
+
+  .b-img button {
+   font-size: 12px !important;
+   padding: 2px; 
+   margin-inline: 45% !important;
+  }
+
+  .b-img img {
+    width: 120px;
+   height: 120px;
+  }
+
+  table {
+    background-color: white;
+    border-collapse: collapse !important ;
+  }
+
+}
+
