--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 
 body {
   background-color: #f5f5e7 !important;
+  min-width: 320px;
 }
 * {
   box-sizing: border-box;
@@ -29,7 +30,7 @@ input {
   resize: vertical;
   box-shadow: 1px 1px 5px #b6b6b6;
 }
-.row {
+.c-row {
   text-align: center !important;
 }
 label {
@@ -40,7 +41,7 @@ label {
   margin: 10px;
   text-align: center;
 }*/
-.row::after {
+.c-row::after {
   content:"";
   clear :both;
   display:block;
@@ -100,11 +101,11 @@ td:before {
   padding-right: 10px; 
   white-space: nowrap;
 }
-
+/*
 //td:nth-of-type(1):before {content :"Task name:";}
 //td:nth-of-type(2):before {content :"Total Hour:";}
 //td:nth-of-type(3):before {content: "User:";}
-//td:nth-of-type(4):before {content: "Delete:";}
+//td:nth-of-type(4):before {content: "Delete:";}*/
 }
 .is-invalid {
   border: 1px solid #ff0000;
