--- a/src/app/user-portal/home/home.component.scss
+++ b/src/app/user-portal/home/home.component.scss
@@ -143,4 +143,11 @@ img {
     border-collapse: collapse !important ;
   }
 
+  h1 {
+    font-size: 20px;
+  }
+
+  .blog button {
+    font-size: 10px;
+  }
 }
