--- a/src/app/user-portal/my-profile/my-profile.component.html
+++ b/src/app/user-portal/my-profile/my-profile.component.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="body">
 		<form [formGroup]="editForm">
-			<div class="row">
+			<div class="c-row">
 	      <div class="input col-25">
 	        <label  for="firstName">First Name:</label>
 	      </div>
@@ -31,7 +31,7 @@
 	          placeholder="update first name...">
 	       </div>
 	    </div>
-	    <div class="row">
+	    <div class="c-row">
 	      <div class="input col-25">
 	        <label  for="lastName">Last Name:</label>
 	      </div>
@@ -40,7 +40,7 @@
 	          placeholder="update last name...">
 	       </div>
 	    </div>
-	    <div class="row">
+	    <div class="c-row">
 	      <div class="input col-25">
 	        <label  for="emailId">EmailId:</label>
 	      </div>
