--- a/src/app/entry/sign-up/sign-up.component.scss
+++ b/src/app/entry/sign-up/sign-up.component.scss
@@ -23,7 +23,7 @@ h3 {
 }
 @media only screen and (max-width:600px) {
   :host {
-    width: 100%;
+    width: 90%;
   }
   .col-25 {
     text-align: left;
@@ -33,5 +33,7 @@ h3 {
     text-align: center;
     font-size: 10px;
   }
-  
+  .have-account {
+    font-size: 8px;
+  }
 }
