--- a/src/app/user-portal/add-blog/add-blog.component.html
+++ b/src/app/user-portal/add-blog/add-blog.component.html
@@ -1,10 +1,9 @@
 
-
   <div class="modal-header">
     <h3 class="modal-title mx-auto text-info"><strong>{{ titleBlog }}</strong></h3>
   </div>
   <div class="modal-body">
-    <form [formGroup]="blogForm" class="form">
+    <form [formGroup]="blogForm" class="form" appSubmitForm>
       <div class="c-row">
         <div class="input col-25">
           <label  for="title">Blog Title:</label>
@@ -15,6 +14,7 @@
           <div *ngIf="title.errors && (title.invalid && title.touched)">
             <small  class="text-danger" *ngIf="title.errors?.required">Title is required</small>
             <small  class="text-danger" *ngIf="title.errors?.minlength">Title must have 2 characters</small>
+            <small  class="text-danger" *ngIf="title.errors?.forbiddenSpace">only spaces are invalid</small>
           </div>
         </div>
       </div>
@@ -29,6 +29,7 @@
           <div *ngIf="description.errors && (description.invalid && description.touched)">
             <small  class="text-danger" *ngIf="description.errors?.required">Description is required</small>
             <small  class="text-danger" *ngIf="description.errors?.minlength">Description must have 2 characters</small>
+            <small  class="text-danger" *ngIf="description.errors?.forbiddenSpace">only spaces are invalid</small>
           </div>
         </div>
       </div>
@@ -43,6 +44,7 @@
           <div *ngIf="content.errors && (content.invalid && content.touched)">
             <small  class="text-danger" *ngIf="content.errors?.required">Content is required</small>
             <small  class="text-danger" *ngIf="content.errors?.minlength">Content must have 2 characters</small>
+            <small  class="text-danger" *ngIf="content.errors?.forbiddenSpace">only spaces are invalid</small>
           </div>
         </div>
       </div>
@@ -50,7 +52,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary mr-4" (click)="addBlog() ">Save</button>
+    <button type="button" class="btn btn-primary mr-4" (click)="addBlog()">Save</button>
     <button type="button" class="btn btn-secondary mr-2" (click)="activeModal.close('Close click')">Close</button>
   </div>
 
