--- a/src/app/user-portal/add-blog/add-blog.component.scss
+++ b/src/app/user-portal/add-blog/add-blog.component.scss
@@ -35,5 +35,10 @@
     text-align: center;
     font-size: 10px;
   }
-  
+  h3 {
+    font-size: 20px;
+  }
+  button {
+    font-size: 10px;
+  }
 }
