--- a/src/app/user-portal/my-profile/my-profile.component.scss
+++ b/src/app/user-portal/my-profile/my-profile.component.scss
@@ -21,3 +21,27 @@
 .foot{
 	text-align: right;
 }
+
+@media only screen and (max-width: 600px) {
+
+  :host{
+    width: 90%;
+  }
+  .col-25 {
+    text-align: left;
+    font-size: 10px;
+  }
+  .col-75 {
+    text-align: center;
+    font-size: 10px;
+  }
+  h2,h3 {
+    font-size: 20px;
+  }
+  h6 {
+    font-size: 12px;  
+  }
+  button {
+    font-size: 10px;
+  }
+}
