--- a/src/app/user-portal/nav-bar/nav-bar.component.html
+++ b/src/app/user-portal/nav-bar/nav-bar.component.html
@@ -21,7 +21,8 @@
     </div>
   </div>
   -->
-  <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="navbar navbar-light mynav" style="background-color: #6df0f2;">
+
+<ul ngbNav #nav="ngbNav" [(activeId)]="active" class="navbar navbar-light mynav" style="background-color: #6df0f2;">
   <li [ngbNavItem]="1">
     <a ngbNavLink routerLink='/user-portal/home' class="text"><b>Home</b></a>
     <ng-template ngbNavContent>
@@ -33,7 +34,8 @@
     </ng-template>
   </li>
   <li ngbDropdown class="nav-item ml-auto">
-    <a href (click)="false" class="nav-link" ngbDropdownToggle><i class="fa fa-fw fa-user mr-1 5x"></i>Dropdown</a>
+    <a href (click)="false" class="nav-link" ngbDropdownToggle><i class="fa fa-fw fa-user mr-1 5x"></i>
+    {{ currUser }}</a>
     <div ngbDropdownMenu>
       <a routerLink="/user-portal/profile" ngbDropdownItem>Profile</a>
       <div class="dropdown-divider"></div>
@@ -43,4 +45,53 @@
 </ul>
 
 <div [ngbNavOutlet]="nav" class="mt-2"></div>
+
+
+<!--<nav class="navbar navbar-expand-lg navbar-light mb-3" style="background-color: #6df0f2;">
+  <a class="navbar-brand" [routerLink]="'.'">Responsive navbar</a>
+
+  Step 3: Toggle the value of the property when the toggler button is clicked. 
+  <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
+    &#9776;
+  </button>
+
+ Step 2: Add the ngbCollapse directive to the element below. 
+  <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+         Step 4: Close the menu when a link is clicked. 
+        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Examples</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">About</a>
+      </li>
+    </ul>
+    <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="navbar navbar-light mynav">
+      <li [ngbNavItem]="1">
+        <a ngbNavLink routerLink='/user-portal/home' class="text"><b>Home</b></a>
+        <ng-template ngbNavContent>
+        </ng-template>
+      </li>
+      <li [ngbNavItem]="2">
+        <a ngbNavLink routerLink='/user-portal/usersBlog'><b>All Blogs</b></a>
+        <ng-template ngbNavContent>
+        </ng-template>
+      </li>
+      <li ngbDropdown class="nav-item ml-auto">
+        <a href (click)="false" class="nav-link" ngbDropdownToggle><i class="fa fa-fw fa-user mr-1 5x"></i>
+        {{ currUser }}</a>
+        <div ngbDropdownMenu>
+          <a routerLink="/user-portal/profile" ngbDropdownItem>Profile</a>
+          <div class="dropdown-divider"></div>
+          <button ngbDropdownItem (click)="logout()">Logout</button>
+        </div>
+      </li>
+    </ul>
+
+  </div>
+</nav>
+-->
 
