--- a/src/app/user-portal/add-blog/add-blog.component.html
+++ b/src/app/user-portal/add-blog/add-blog.component.html
@@ -3,7 +3,7 @@
     <h3 class="modal-title mx-auto text-info"><strong>{{ titleBlog }}</strong></h3>
   </div>
   <div class="modal-body">
-    <form [formGroup]="blogForm" class="form" appSubmitForm>
+    <form [formGroup]="blogForm" class="form" (ngSubmit)="addBlog()" appSubmitForm>
       <div class="c-row">
         <div class="input col-25">
           <label  for="title">Blog Title:</label>
@@ -52,7 +52,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary mr-4" (click)="addBlog()">Save</button>
+    <button type="submit" class="btn btn-primary mr-4" (click)="addBlog()">Save</button>
     <button type="button" class="btn btn-secondary mr-2" (click)="activeModal.close('Close click')">Close</button>
   </div>
 
