--- a/src/app/user-portal/users-blog/users-blog.component.html
+++ b/src/app/user-portal/users-blog/users-blog.component.html
@@ -1,6 +1,6 @@
 
   <div class="heading">
-    <h1>All Users Blogs </h1>
+    <h2>All Users Blogs </h2>
   </div>
 
   <ng-template #tipContent >
@@ -24,42 +24,56 @@
     Comment given by users: 
   </ng-template>
 
+<div class="blog-table"> 
+  <table cdk-table [dataSource]="tableDataSource$">
+    
+    <ng-container cdkColumnDef="user">
+      <th cdk-header-cell *cdkHeaderCellDef> </th>
+      <td cdk-cell *cdkCellDef="let row"> {{ row.user.firstName }} </td>
+    </ng-container>
 
-  <div class="blog-table">
-    <table>
-      <tbody id="tableBody">
-        <tr *ngFor="let record of allUsersBlog; let i=index">
-          <!--<td class="seqno">{{ i+1 }}</td>-->
-          <td class="b-user">Created By: {{ record.user["firstName"]}}</td> 
-          <td class="b-title">{{ record.title }}</td>
-          <td class="b-descp">{{ record.description }}</td>
-          <td class="b-content">{{ record.content }}</td>
-          <td class="b-cmt" *ngIf="record.commentItems.length > 0">
-            <button type="button" class="btn btn-primary btn-sm pr-1 pl-3" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)=increaseLikes(record.id)>
-              <span id="like" class="far fa-thumbs-up">
-                {{ record.likeItems.length }}
-              </span>
-            </button>
-            <button type="button" class="btn btn-primary ml-3 btn-sm" [ngbPopover]="popContent" [popoverTitle]="popTitle" (click)="getComments(i)">
-              <span class="cmt-s">
-                Comments {{ record.commentItems.length }}
-              </span> 
-            </button>
-          </td>
-          <td class="b-cmt" *ngIf="record.commentItems.length == 0">
-            <button type="button" class="btn btn-primary btn-sm pr-1 pl-3" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)="increaseLikes(record.id)">
-              <span id="like" class="far fa-thumbs-up">{{ record.likeItems.length }}</span>
-            </button>
-            <button type="button" class="btn btn-primary ml-3 btn-sm" [ngbPopover]="popContent" [popoverTitle]="popTitle" (click)="getComments(i)">
-              <span class="cmt-s">
-                Comments {{ record.commentItems.length }}
-              </span>
-            </button>
-          </td>
-          <td class=b-img   ><img src="./assets/images/nature.jpeg"></td>
-          <td class="b-date">{{ record.createdAt | date: 'MMM dd YYYY'}}</td>
-        </tr> 
-      </tbody>
-    </table>
-  </div>
- 
+    <ng-container cdkColumnDef="title">
+      <th cdk-header-cell *cdkHeaderCellDef> </th>
+      <td cdk-cell *cdkCellDef="let row"> {{ row.title }} </td>
+    </ng-container>
+
+    <ng-container cdkColumnDef="description">
+      <th cdk-header-cell *cdkHeaderCellDef> </th>
+      <td cdk-cell *cdkCellDef="let row"> {{ row.description }} </td>
+    </ng-container>
+
+    <ng-container cdkColumnDef="content">
+      <th cdk-header-cell *cdkHeaderCellDef> </th>
+      <td cdk-cell *cdkCellDef="let row"> {{ row.content }} </td>
+    </ng-container>
+
+    <ng-container cdkColumnDef="likeAndComment">
+      <th cdk-header-cell *cdkHeaderCellDef></th>
+      <td cdk-cell *cdkCellDef="let row; let i=index">
+        <button type="button" class="btn btn-primary btn-sm pr-1 pl-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)=increaseLikes(row.id)>
+          <span id="like" class="far fa-thumbs-up">
+            {{ row.likeItems.length }}
+          </span>
+        </button>
+        <button type="button" class="btn btn-primary ml-3 btn-sm" [ngbPopover]="popContent" [popoverTitle]="popTitle" (click)="getComments(i)">
+          <span class="cmt-s">
+            Comments {{ row.commentItems.length }}
+          </span> 
+        </button>
+      </td>
+    </ng-container>
+
+    <ng-container cdkColumnDef="createdAt">
+      <th cdk-header-cell *cdkHeaderCellDef> </th>
+      <td cdk-cell *cdkCellDef="let row"> {{ row.createdAt | date: 'MMM dd YYYY' }} </td>
+    </ng-container>
+
+    <ng-container cdkColumnDef="image">
+      <th cdk-header-cell *cdkHeaderCellDef> </th>
+      <td cdk-cell *cdkCellDef><img src="./assets/images/nature.jpeg"></td>
+    </ng-container>
+
+    <!--<tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>-->
+    <tr cdk-row *cdkRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
