--- a/src/app/user-portal/home/home.component.scss
+++ b/src/app/user-portal/home/home.component.scss
@@ -13,7 +13,7 @@ h1 {
   background-color: orange;
 }
 .blog-table {
-  width: 60%;
+  width: 80%;
   padding: 10px;
   text-align: center;
   margin: auto;
@@ -24,9 +24,9 @@ table {
   border-collapse: collapse ;
   width: 100%;
 }
-td {
+td,th {
   text-align: center;
-  padding: 8px;
+  padding: 10px;
 }
 /*tr:nth-child(even) {
   background-color: #d6dbdb;
@@ -81,9 +81,7 @@ tr:hover {
 .cmt-s {
   color: #faf5f5;
   margin-right: 3px;
-  /*background-color: #0492ca;*/
   border-radius:2px ;
-  /*padding: 5px;*/
   display: block;
 }
 .b-date {
@@ -96,16 +94,13 @@ tr:hover {
 }
 
 #like {
-  /*padding: 5px;*/
-  margin-right: 15px;
   border-radius:2px ;
   color: white ;
-  /*background-color: #0492ca;*/
 }
 
 img {
-  height: 170px;
-  width: 170px;
+  height: 70px;
+  width: 70px;
 }
 
 .b-img button {
