--- a/src/app/user-portal/users-blog/users-blog.component.scss
+++ b/src/app/user-portal/users-blog/users-blog.component.scss
@@ -3,11 +3,10 @@
   text-align: left;
 }
 .blog-table {
-  width: 60%;
+  width: 50%;
   padding: 10px;
   text-align: center;
-  margin: auto;
-  
+  margin: auto;  
 }
 table {
   background-color: white;
@@ -18,6 +17,7 @@ td {
   text-align: center;
   padding: 8px;
 }
+
 /*
 tr:nth-child(even) {
   background-color: #d6dbdb;
@@ -25,27 +25,28 @@ tr:nth-child(even) {
 tr:hover {
   background-color: #d6dbdb;
 }
-.b-user{
+.cdk-column-user{
   text-align: left;
   display: block;
   font-weight: 700;
   text-decoration: underline;
 }
-.b-title {
+.cdk-column-title {
   text-align: left;
-  font-weight: 700;
+  font-weight: 800;
+  font-size: 16px;
   font-family: sans-serif;
   display: block;
   border-right: hidden;
 }
-.b-descp {
+.cdk-column-description {
   text-align: left;
-  font-weight: 1000;
-  font-size: 20px;
+  font-weight: 600;
+  font-size: 16px;
   font-family: sans-serif;
   display: block;
 }
-.b-content {
+.cdk-column-content {
   font-size: 15px;
   color:#413f3f;
   font-family: sans-serif;
@@ -53,7 +54,7 @@ tr:hover {
   text-align: justify;
   display: block;
 }
-.b-cmt {
+.cdk-column-likeAndComment {
   font-family: sans-serif;
   color: #a3a2a2;
   display: block;
@@ -64,15 +65,13 @@ tr:hover {
 .cmt-s {
   color: #faf5f5;
   margin-right: 3px;
-  /*background-color: #0492ca;*/
   border-radius:2px ;
-  /*padding: 5px;*/
 }
 .cmt-v{
   margin-left: 20px;
   text-align: justify;
 }
-.b-date {
+.cdk-column-createdAt {
   display: block;
   text-align: center; 
   font-size: 10px;
@@ -81,11 +80,9 @@ tr:hover {
   color: #797777;
 }
 #like {
-  /*padding: 5px;*/
-  margin-right: 15px;
+  text-align: center;
   border-radius:2px ;
   color: white;
-  /*background-color: #0492ca;*/
 }
 
 img {
@@ -94,41 +91,32 @@ img {
 }
 
 @media only screen and (max-width:600px) {
-  
   .blog-table {
     width: 90%;
     margin:auto;
   }
-
   td {
     font-size: 12px !important;
   }
-
-  .b-cmt button {
-   font-size: 12px !important;
+  .cdk-column-likeAndComment button {
+   font-size: 10px !important;
    padding: 2px; 
   }
-
-  .b-img button {
-   font-size: 12px !important;
-   padding: 2px; 
-   margin-inline: 45% !important;
-  }
-
-  .b-img img {
+  .cdk-column-image img {
     width: 120px;
    height: 120px;
   }
-
-  table {
-    background-color: white;
-    border-collapse: collapse !important ;
+  .cdk-column-createdAt {
+    font-size: 8px !important;
   }
 
-  h1 {
+  h2 {
     font-size: 20px;
-  
   }
+  table {
+  background-color: white;
+  border-collapse: collapse !important;
+}
 
 }
 
