--- a/src/app/user-portal/home/home.component.scss
+++ b/src/app/user-portal/home/home.component.scss
@@ -17,16 +17,18 @@ h1 {
   padding: 10px;
   text-align: center;
   margin: auto;
-  
 }
 table {
   background-color: white;
   border-collapse: collapse ;
   width: 100%;
 }
-td,th {
+
+.cdk-header-cell, .cdk-cell {
   text-align: center;
   padding: 10px;
+  width: 20%;
+  font-size: 12px;
 }
 /*tr:nth-child(even) {
   background-color: #d6dbdb;
@@ -105,6 +107,9 @@ img {
 
 .b-img button {
   display: block;
+}
+.cdk-column-likeAndComment {
+  white-space: nowrap;
 }
 @media only screen and (max-width:600px) {
   
