--- a/src/app/user-portal/users-blog/users-blog.component.scss
+++ b/src/app/user-portal/users-blog/users-blog.component.scss
@@ -89,7 +89,10 @@ img {
   height: 170px;
   width: 170px;
 }
-
+ul {
+    list-style-type: none;
+    padding: 10px; 
+  }
 @media only screen and (max-width:600px) {
   .blog-table {
     width: 90%;
